--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		<p class="common-BodyText">
 			Thập niên 40-50 là giai đọan của những viên gạch đầu tiên về NLP với nền tảng: máy tự động và mô hình về xác suất hay thông tin lý thuyết.Máy tự động nổi lên trong những năm 50 bắt nguồn từ mô hình tính toán thuật toán của Alan Turing, được nhiều người cho là nền tảng của khoa học máy tính hiện đại.Shannon (1948) áp dụng mô hình xác suất của các quá trình rời rạc Markov vào máy tự động cho ngôn ngữ.
 		</p>
-		<a class="common-BodyText common-Link common-Link--arrow" href="">
+		<a class="common-BodyText common-Link common-Link--arrow" href="Sub/history.html" target="_blank">
 			Đọc thêm về lịch sử của NLP
 		</a>
 	</section>
@@ -56,7 +56,7 @@
 		<h2 class="common-UppercaseTitle">
 			<img class="heading-icon" src="app.png" width="75" />
 			<span>
-				<a href="">Các bài toán của NLP</a>
+				<a href="Sub/Tasks.html" target="_blank">Các bài toán của NLP</a>
 			</span>
 		</h2>
 		<p class="common-BodyText">
@@ -70,7 +70,7 @@
 		<section id="always-improving">
 			<h2 class="common-Uppercase">
 				<img class="heading-icon" src="app2.png" />
-				<a href="">Ứng dụng của NLP</a>
+				<a href="Sub/apps.html" target="_blank">Ứng dụng của NLP</a>
 			</h2>
 			<p class="common-BodyText">
 				NLP có được áp dụng rất nhiều trong công nghiệp, giáo dục cũng như đời sống hàng ngày: Hệ thống chấm điểm tự động, hệ thống dịch tự động, hệ thống nhận diện giọng nói...
@@ -80,7 +80,7 @@
 		<section id="global-scale">
 			<h2 class="common-Uppercase">
 				<img class="heading-icon" src="diff.png" />
-				<a href="">Những khó khăn của NLP</a>
+				<a href="Sub/challenges.html" target="_blank">Những khó khăn của NLP</a>
 			</h2>
 			<p class="common-BodyText">
 				Việc nghiên cứu và phát triển NLP hiện đang vấp phải khá nhiều khó khăn, nổi bật là Sự nhập nhằng của ngôn ngữ, Giới hạn của phần cứng máy tính...
