--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		<h2 class="common-UppercaseTitle">
 			<img class="heading-icon" src="app.png" width="75" />
 			<span>
-				<a href="Sub/Tasks.html" target="_blank">Các bài toán của NLP</a>
+				<a href="Sub/tasks.html" target="_blank">Các bài toán của NLP</a>
 			</span>
 		</h2>
 		<p class="common-BodyText">
